# hivc-d-verification

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PAPER.md  PAPER.tex  PAPER_EN.md  PAPER_EN.tex  README.md  REQUIREMENTS.md  pyproject.toml  requirements-gpu.txt  requirements.txt  role.json
configs/: agent_smoke.yaml  devin_experiment.yaml  devin_experiment_90games.yaml  experiment.yaml  profiles_expertise_only.yaml  profiles_soft_value.yaml  profiles_soft_value_orthogonal.yaml  profiles_soft_value_swap.yaml  smoke.yaml  zai_experiment.yaml  zai_experiment_90games.yaml  zai_experiment_server_10games.yaml  zai_flashx_smoke.yaml  zai_glm47_90games.yaml  zai_glm47_90games_single_key.yaml  zai_glm47_90games_single_key_parallel.yaml  zai_glm47_smoke.yaml
document/: development-log.md
document/run-experiments/: Devin_API実験ガイド.md  GPU実験実行手順.md  ZAI_API実験ガイド.md
document/要件定義/: GPU並列実験効率化要件.md  RoleとValue分離によるV整合検証要件.md  エージェントフレームワークプロンプト設計.md  (+2 more)
hivc_sim/: agent.py  agreement.py  analysis.py  config.py  environment.py  experiment.py  grid_search.py  join_llm_eval.py  main.py  profiles.py  rollout_validation.py  turn_game.py  turn_game_cli.py  turn_game_metrics.py  visualize.py
personas/: deepsea_default.json  deepsea_high_conflict.json
scripts/: __init__.py  config_loader.py  deploy_viz_to_gpu.sh  devin_api.py  devin_two_agent_experiment.py  download_gpu_logs.py  gpu_run.py  live_server.py  llm_turn_game_common.py  local_preview.html  local_preview.py  qwen3_14b_4bit_smoke.py  qwen_parallel_experiment.py  qwen_parallel_worker.py  qwen_turn_game_agent_smoke.py  qwen_two_agent_experiment.py  qwen_two_agent_turn_game_smoke.py  validate_experiment_preflight.py  visualize_game.html  workflow_cli.py  zai_api.py  zai_two_agent_experiment.py
(+31 files in other folders)
