[project]
name = "hivc-d-verification"
version = "0.1.0"
description = "HIVC-D GPU experiment workflow commands"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pytest>=7.4",
    "pyyaml>=6.0",
]

[project.scripts]
sync = "scripts.workflow_cli:sync_main"
experiment = "scripts.workflow_cli:experiment_main"
download = "scripts.workflow_cli:download_main"
visualize = "scripts.workflow_cli:visualize_main"
validate-smoke = "scripts.validate_experiment_preflight:main"
devin-experiment = "scripts.devin_two_agent_experiment:main"
devin-validate-env = "scripts.devin_two_agent_experiment:validate_env"
zai-experiment = "scripts.zai_two_agent_experiment:main"
zai-validate-env = "scripts.zai_two_agent_experiment:validate_env"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scripts"]

[tool.setuptools.package-data]
scripts = ["local_preview.html"]

[tool.pytest.ini_options]
pythonpath = ["."]
